# argo-piloting

./: .gitignore  README.md  main.py  pyproject.toml
notebooks/: argo_data_analyser.ipynb  float_finder.ipynb  multi_float_error.ipynb
raw/argo_data/argo_7902194/: 7902194_profiles.nc
src/: argo_data_getter.py  control.py  data_getter.py  data_loader.py  generate_test_data.py  particle_mover.py  plotter.py  sim_types.py
tests/: test_sim_mechanics.py
