[project]
name = "sim"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0",
    "pandas>=2.0",
    "matplotlib>=3.8",
    "scikit-learn>=1.4",
    "jupyter>=1.0",
    "copernicusmarine>=2.3.0",
    "xarray>=2026.2.0",
    "h5py>=3.16.0",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "pandas-stubs~=2.3.3",
    "cartopy>=0.25.0",
    "scipy-stubs~=1.17.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]
